--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "date-fns": "^2.0.0-beta.5",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.19.8",
     "typescript": "^3.6.4",
-    "yup": "^0.27.0"
+    "yup": "^0.27.0",
+    "nodemailer": "^6.3.1",
+    "nodemailer-express-handlebars": "^3.1.0",
+    "express-handlebars": "^3.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.4.0",
