--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "dev:debug": "nodemon --inspect src/server"
+    "dev:debug": "nodemon --inspect src/server",
+    "queue": "nodemon src/queue.js"
   },
   "dependencies": {
+    "@sentry/node": "5.7.1",
     "bcryptjs": "^2.4.3",
+    "bee-queue": "^1.2.2",
     "date-fns": "^2.0.0-beta.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "intl": "^1.2.5",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.3.1",
     "nodemailer-express-handlebars": "^3.1.0",
@@ -20,8 +25,7 @@
     "properties-reader": "^0.3.1",
     "sequelize": "^5.19.8",
     "typescript": "^3.6.4",
-    "yup": "^0.27.0",
-    "dotenv": "^8.2.0"
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.4.0",
