--- a/src/utils/properties/textProperties.properties
+++ b/src/utils/properties/textProperties.properties
@@ -3,6 +3,7 @@ json.request.invalid.parameters = Parâmetros inválidos.
 ### Mensagens referentes a matricula do aluno ###
 registration.validation.already.commited = O usuário já tem um plano ativo.
 registration.validation.contract.already.exist=Plano informado não existe.
+registration.validation.student.not.found=Estudante não existe na base de dados.
 
 ### Mensagens referentes ao plano ###
 contract.valitaion.already.exist=Contrato já existe com esse titulo.
