Cancelamento de matricula
Adicionado email de aviso de cancelamento de matricula

--- a/src/utils/properties/textProperties.properties
+++ b/src/utils/properties/textProperties.properties
@@ -15,3 +15,7 @@ login.validation.invalid.credentials=Usuário ou senha inválidos.
 ### Mensagns referentes ao aluno ###
 student.validation.already.exist=Estudante já existe com esse e-mail.
 
+### Mensagens de email ###
+email.registration.student.subject=Nova matrícula
+email.registration.cancelation.student.subject=Cancelamento de matrícula
+
