--- a/src/utils/properties/textProperties.properties
+++ b/src/utils/properties/textProperties.properties
@@ -19,3 +19,7 @@ student.validation.already.exist=Estudante já existe com esse e-mail.
 email.registration.student.subject=Nova matrícula
 email.registration.cancelation.student.subject=Cancelamento de matrícula
 
+### checkin ###
+checkin.max.allowed=Você atingiu o máximo de checkins permitidos.
+checkin.date.invalid=Data inválida.
+
