--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-handlebars": "^3.1.0",
     "intl": "^1.2.5",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.7",
     "nodemailer": "^6.3.1",
     "nodemailer-express-handlebars": "^3.1.0",
     "pg": "^7.12.1",
