--- a/src/utils/properties/textProperties.properties
+++ b/src/utils/properties/textProperties.properties
@@ -1,9 +1,10 @@
 json.request.invalid.parameters = Parâmetros inválidos.
+json.request.generic.error = Não foi possível completar a requisição.
 
 ### Mensagens referentes a matricula do aluno ###
 registration.validation.already.commited = O usuário já tem um plano ativo.
 registration.validation.contract.already.exist=Plano informado não existe.
-registration.validation.student.not.found=Estudante não existe na base de dados.
+registration.validation.student.not.found=Aluno não existe na base de dados.
 
 ### Mensagens referentes ao plano ###
 contract.valitaion.already.exist=Contrato já existe com esse titulo.
@@ -13,7 +14,7 @@ contract.valitaion.not.found=Contrato não encontrado.
 login.validation.invalid.credentials=Usuário ou senha inválidos.
 
 ### Mensagns referentes ao aluno ###
-student.validation.already.exist=Estudante já existe com esse e-mail.
+student.validation.already.exist=Aluno já existe com esse e-mail.
 
 ### Mensagens de email ###
 email.registration.student.subject=Nova matrícula
@@ -23,3 +24,5 @@ email.registration.cancelation.student.subject=Cancelamento de matrícula
 checkin.max.allowed=Você atingiu o máximo de checkins permitidos.
 checkin.date.invalid=Data inválida.
 
+### Help ###
+help.not.found=O questionamento informado não foi encontrado na base de dados.
